--- a/audio_analysis_demo.ipynb
+++ b/audio_analysis_demo.ipynb
@@ -36,8 +36,18 @@
    },
    "outputs": [],
    "source": [
-    "pitch = recording.extract_pitch()"
+    "pitch = recording.extract_pitch()\n",
+    "# no need to run pitch filter as it is run in extract_pitch by default"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
