Added source to tonic from the pitch

--- a/audio_analysis_demo.ipynb
+++ b/audio_analysis_demo.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import os\n",
-    "from tomato.audio.Audio import Audio"
+    "from tomato.audio.AudioAnalyzer import AudioAnalyzer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -25,7 +26,21 @@
     "                              'd2731692-626d-4a6d-9b67-a70c9e7b9745',\n",
     "                              'd2731692-626d-4a6d-9b67-a70c9e7b9745.mp3')\n",
     "\n",
-    "recording = Audio(audio_filepath)"
+    "audioAnalyzer = AudioAnalyzer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Pitch extraction\n",
+    "# There is no need to run pitch filter as it is run in extract_pitch by default\n",
+    "# NOTE: This will take saveral minutes depending on the machine you run this algorithm on\n",
+    "pitch = audioAnalyzer.extract_pitch(audio_filepath)\n"
    ]
   },
   {
@@ -33,18 +48,6 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "pitch = recording.extract_pitch()\n",
-    "# no need to run pitch filter as it is run in extract_pitch by default"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
    },
    "outputs": [],
    "source": []
