Added pitch distribution computation

--- a/audio_analysis_demo.ipynb
+++ b/audio_analysis_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -25,13 +25,13 @@
     "audio_filepath = os.path.join('huzzam--sazsemaisi--aksaksemai----udi_nevres_bey',\n",
     "                              'd2731692-626d-4a6d-9b67-a70c9e7b9745',\n",
     "                              'd2731692-626d-4a6d-9b67-a70c9e7b9745.mp3')\n",
-    "\n",
+    "makam = 'huzzam'\n",
     "audioAnalyzer = AudioAnalyzer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -45,11 +45,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "pitch = json.load(open('pitch.json'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
+   "source": [
+    "# Tonic and transposition (ahenk) identification\n",
+    "tonic = audioAnalyzer.identify_tonic(pitch)\n",
+    "ahenk = audioAnalyzer.identify_ahenk(tonic, makam)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# histogram analysis and note modeling\n",
+    "pitch_distribution = audioAnalyzer.compute_pitch_distribution(pitch, tonic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<modetonicestimation.PitchDistribution.PitchDistribution instance at 0x119353d40>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
