Added the analyze method which calls all audio analysis simultaneously

--- a/audio_analysis_demo.ipynb
+++ b/audio_analysis_demo.ipynb
@@ -31,28 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Pitch extraction\n",
-    "# There is no need to run pitch filter as it is run in extract_pitch by default\n",
-    "# NOTE: This will take saveral minutes depending on the machine you run this algorithm on\n",
-    "pitch = audioAnalyzer.extract_pitch(audio_filepath)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "pitch = json.load(open('pitch.json'))"
+    "# NOTE: This will take saveral minutes depending on the machine you \n",
+    "# run this algorithm on\n",
+    "pitch = audioAnalyzer.extract_pitch(audio_filepath)\n",
+    "# There is no need to run pitch filter, as it is run in extract_pitch \n",
+    "# by default"
    ]
   },
   {
@@ -76,9 +66,21 @@
    },
    "outputs": [],
    "source": [
-    "# histogram analysis and note modeling\n",
+    "# histogram computation\n",
     "pitch_distribution = audioAnalyzer.compute_pitch_distribution(pitch, tonic)\n",
     "pitch_class_distribution = pitch_distribution.to_pcd()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# tuning analysis and stable pitch extraction\n",
+    "stable_notes = audioAnalyzer.get_stable_notes(pitch_distribution, tonic, makam)"
    ]
   }
  ],
