--- a/audio_analysis_demo.ipynb
+++ b/audio_analysis_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -15,13 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# insantiate\n",
+    "# instantiate\n",
     "audio_filepath = os.path.join('huzzam--sazsemaisi--aksaksemai----udi_nevres_bey',\n",
     "                              'd2731692-626d-4a6d-9b67-a70c9e7b9745',\n",
     "                              'd2731692-626d-4a6d-9b67-a70c9e7b9745.mp3')\n",
@@ -30,57 +30,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can use the single line call \"analyze,\" which does all the available analysis simultaneously"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# NOTE: This will take saveral minutes depending on the performance of your machine\n",
+    "features = audioAnalyzer.analyze(audio_filepath, makam=makam)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... or you can call all the methods individually"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Pitch extraction\n",
-    "# NOTE: This will take saveral minutes depending on the machine you \n",
-    "# run this algorithm on\n",
+    "# predominant melody extraction\n",
     "pitch = audioAnalyzer.extract_pitch(audio_filepath)\n",
     "# There is no need to run pitch filter, as it is run in extract_pitch \n",
-    "# by default"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Tonic and transposition (ahenk) identification\n",
+    "# by default\n",
+    "\n",
+    "# tonic identification\n",
     "tonic = audioAnalyzer.identify_tonic(pitch)\n",
-    "ahenk = audioAnalyzer.identify_ahenk(tonic, makam)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "\n",
     "# histogram computation\n",
     "pitch_distribution = audioAnalyzer.compute_pitch_distribution(pitch, tonic)\n",
-    "pitch_class_distribution = pitch_distribution.to_pcd()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# tuning analysis and stable pitch extraction\n",
-    "stable_notes = audioAnalyzer.get_stable_notes(pitch_distribution, tonic, makam)"
+    "pitch_class_distribution = pitch_distribution.to_pcd()\n",
+    "\n",
+    "# transposition (ahenk) identification\n",
+    "ahenk = audioAnalyzer.identify_ahenk(tonic, makam)\n",
+    "\n",
+    "# stable note extraction (tuning analysis)\n",
+    "stable_notes = audioAnalyzer.get_stable_notes(pitch_distribution, tonic, makam)\n"
    ]
   }
  ],
