Initialized SymbTrAnalyzer.py

--- a/audio_analysis_demo.ipynb
+++ b/audio_analysis_demo.ipynb
@@ -83,7 +83,7 @@
     "# predominant melody extraction\n",
     "pitch = audioAnalyzer.extract_pitch(audio_filepath)\n",
     "\n",
-    "# even though predominant melody calls pitch filter in Essentia,\n",
+    "# even though predominant melody calls the pitch filter in Essentia,\n",
     "# it is not as goot as Sercan Atli's implementation in Python.\n",
     "pitch = audioAnalyzer.filter_pitch(pitch)\n",
     "\n",
