--- a/score_analysis_demo.ipynb
+++ b/score_analysis_demo.ipynb
@@ -21,6 +21,12 @@
    },
    "outputs": [],
    "source": [
+    "# score filepaths\n",
+    "txt_filepath = os.path.join('ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede',\n",
+    "                            'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt')\n",
+    "mu2_filepath = os.path.join('ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede',\n",
+    "                            'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2')\n",
+    "\n",
     "# only needed if the filename is modified from the SymbTr naming convention\n",
     "symbtr_name = 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'\n",
     "\n",
@@ -34,6 +40,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... or you can call all the methods individually\n",
+    "\n",
+    "You can additionally use the **symbtrdataextractor** package to call the extractors for each score format. You can refer to the [extractsymbtrdata.ipynb](https://github.com/sertansenturk/symbtrdataextractor/blob/master/extractsymbtrdata.ipynb) for an interactive demo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -44,25 +59,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n"
+      "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
+      "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
+      "   Unknown title target.\n"
      ]
     }
    ],
    "source": [
-    "txt_filepath = os.path.join('ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede',\n",
-    "                            'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt')\n",
-    "txt_data = scoreAnalyzer.extract_data_from_txt(txt_filepath, symbtr_name=symbtr_name, \n",
-    "                                               mbid=mbids, segment_note_bound_idx=None)"
+    "# Extract the phrase boundaries automatically using the precomputed training model obtained from\n",
+    "# https://github.com/sertansenturk/turkish_makam_corpus_stats/tree/master/data/SymbTrSegmentation\n",
+    "\n",
+    "\n",
+    "# Extract the (meta)data from the SymbTr scores\n",
+    "# This includes the metadata from the score formats and MusicBrainz, extracted sections\n",
+    "# rhythmic structure etc.\n",
+    "score_data = scoreAnalyzer.extract_data(\n",
+    "    txt_filepath, mu2_filepath, symbtr_name=symbtr_name, mbid=mbids, \n",
+    "    segment_note_bound_idx=None)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
