phrase_segmentation will be added if demanded

--- a/score_analysis_demo.ipynb
+++ b/score_analysis_demo.ipynb
@@ -40,15 +40,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "... or you can call all the methods individually\n",
-    "\n",
-    "You can additionally use the **symbtrdataextractor** package to call the extractors for each score format. You can refer to the [extractsymbtrdata.ipynb](https://github.com/sertansenturk/symbtrdataextractor/blob/master/extractsymbtrdata.ipynb) for an interactive demo"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -60,15 +51,14 @@
      "output_type": "stream",
      "text": [
       "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
-      "   Unknown title target.\n"
+      "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n"
      ]
     }
    ],
    "source": [
     "# Extract the phrase boundaries automatically using the precomputed training model obtained from\n",
     "# https://github.com/sertansenturk/turkish_makam_corpus_stats/tree/master/data/SymbTrSegmentation\n",
-    "\n",
+    "# TODO\n",
     "\n",
     "# Extract the (meta)data from the SymbTr scores\n",
     "# This includes the metadata from the score formats and MusicBrainz, extracted sections\n",
@@ -76,6 +66,13 @@
     "score_data = scoreAnalyzer.extract_data(\n",
     "    txt_filepath, mu2_filepath, symbtr_name=symbtr_name, mbid=mbids, \n",
     "    segment_note_bound_idx=None)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can additionally use the **symbtrdataextractor** package to call the extractors for each score format. You can refer to the [extractsymbtrdata.ipynb](https://github.com/sertansenturk/symbtrdataextractor/blob/master/extractsymbtrdata.ipynb) for an interactive demo"
    ]
   }
  ],
