--- a/score_analysis_demo.ipynb
+++ b/score_analysis_demo.ipynb
@@ -31,7 +31,7 @@
     "symbtr_name = 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'\n",
     "\n",
     "# relevant recording or work mbid, if you want additional information from musicbrainz\n",
-    "# note, very rare but there can be more that mone mbid returned, we are going to use \n",
+    "# Note: very rare but there can be more that one mbid returned, we are going to use \n",
     "# the first work to get fetch the metadata\n",
     "mbids = ScoreExtras.get_mbids(symbtr_name)[0]\n",
     "\n",
