--- a/score_analysis_demo.ipynb
+++ b/score_analysis_demo.ipynb
@@ -56,23 +56,18 @@
     }
    ],
    "source": [
-    "# Extract the phrase boundaries automatically using the precomputed training model obtained from\n",
-    "# https://github.com/sertansenturk/turkish_makam_corpus_stats/tree/master/data/SymbTrSegmentation\n",
-    "# TODO\n",
-    "\n",
     "# Extract the (meta)data from the SymbTr scores\n",
     "# This includes the metadata from the score formats and MusicBrainz, extracted sections\n",
     "# rhythmic structure etc.\n",
     "score_data = scoreAnalyzer.extract_data(\n",
-    "    txt_filepath, mu2_filepath, symbtr_name=symbtr_name, mbid=mbids, \n",
-    "    segment_note_bound_idx=None)\n"
+    "    txt_filepath, mu2_filepath, symbtr_name=symbtr_name, mbid=mbids)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can additionally use the **symbtrdataextractor** package to call the extractors for each score format. You can refer to the [extractsymbtrdata.ipynb](https://github.com/sertansenturk/symbtrdataextractor/blob/master/extractsymbtrdata.ipynb) for an interactive demo"
+    "You can use the **symbtrdataextractor** package to call the extractors for each score format. You can refer to the [extractsymbtrdata.ipynb](https://github.com/sertansenturk/symbtrdataextractor/blob/master/extractsymbtrdata.ipynb) for an interactive demo"
    ]
   }
  ],
