Added additional info to score_analysis_demo.ipynb

--- a/score_analysis_demo.ipynb
+++ b/score_analysis_demo.ipynb
@@ -31,7 +31,10 @@
     "symbtr_name = 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'\n",
     "\n",
     "# relevant recording or work mbid, if you want additional information from musicbrainz\n",
-    "# Note: very rare but there can be more that one mbid returned, we are going to use \n",
+    "# Note 1: MBID input will make the function returns significantly slower because we\n",
+    "# have to wait a couple of seconds before each subsequent query from MusicBrainz.\n",
+    "#\n",
+    "# Note 2: very rare but there can be more that one mbid returned, we are going to use \n",
     "# the first work to get fetch the metadata\n",
     "mbids = ScoreExtras.get_mbids(symbtr_name)[0]\n",
     "\n",
@@ -87,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
