--- a/score_analysis_demo.ipynb
+++ b/score_analysis_demo.ipynb
@@ -53,18 +53,20 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# TODO"
+    "# TODO\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can use the **symbtrdataextractor** package to call the extractors for each score format. You can refer to the [extractsymbtrdata.ipynb](https://github.com/sertansenturk/symbtrdataextractor/blob/master/extractsymbtrdata.ipynb) for an interactive demo"
+    "... or you can call all the methods individually\n",
+    "\n",
+    "If you want to call the extractors for each score format individualy, you can use the **symbtrdataextractor** package. Please refer to the [extractsymbtrdata.ipynb](https://github.com/sertansenturk/symbtrdataextractor/blob/master/extractsymbtrdata.ipynb) for an interactive demo"
    ]
   },
   {
@@ -86,13 +88,14 @@
    ],
    "source": [
     "# Automatic phrase segmentation on the SymbTr-txt score\n",
-    "scoreAnalyzer.segment_phrase(txt_filepath)\n",
+    "phrase_bounds = scoreAnalyzer.segment_phrase(txt_filepath, symbtr_name=symbtr_name)\n",
     "\n",
     "# Extract the (meta)data from the SymbTr scores\n",
     "# This includes the metadata from the score formats and MusicBrainz, extracted sections\n",
     "# rhythmic structure etc.\n",
     "score_data = scoreAnalyzer.extract_data(\n",
-    "    txt_filepath, mu2_filepath, symbtr_name=symbtr_name, mbid=mbids)\n"
+    "    txt_filepath, mu2_filepath, symbtr_name=symbtr_name, mbid=mbids, \n",
+    "    segment_note_bound_idx=phrase_bounds['boundary_note_idx'])\n"
    ]
   }
  ],
