Added pickle save to the demos

--- a/score_analysis_demo.ipynb
+++ b/score_analysis_demo.ipynb
@@ -27,12 +27,14 @@
     "                            'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt')\n",
     "mu2_filepath = os.path.join('ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede',\n",
     "                            'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2')\n",
+    "save_filepath = os.path.join('ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede',\n",
+    "                             'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.pkl')\n",
     "\n",
     "# only needed if the filename is modified from the SymbTr naming convention\n",
     "symbtr_name = 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'\n",
     "\n",
     "# instantiate analyzer object\n",
-    "scoreAnalyzer = SymbTrAnalyzer(verbose=True)"
+    "scoreAnalyzer = SymbTrAnalyzer(verbose=True)\n"
    ]
   },
   {
@@ -60,7 +62,10 @@
     }
    ],
    "source": [
-    "score_data, is_data_valid = scoreAnalyzer.analyze(txt_filepath, mu2_filepath, symbtr_name=symbtr_name)"
+    "score_data, is_data_valid = scoreAnalyzer.analyze(txt_filepath, mu2_filepath, symbtr_name=symbtr_name)\n",
+    "\n",
+    "# save features\n",
+    "scoreAnalyzer.to_pickle(score_data, save_filepath)"
    ]
   },
   {
@@ -69,7 +74,7 @@
    "source": [
     "... or you can call all the methods individually\n",
     "\n",
-    "**Note:** If you want to call the extractors for each score format individualy, you can use the **symbtrdataextractor** package. Please refer to the [extractsymbtrdata.ipynb](https://github.com/sertansenturk/symbtrdataextractor/blob/master/extractsymbtrdata.ipynb) for an interactive demo"
+    "**Note:** If you want to call the extractors for each score format individualy, please use the **symbtrdataextractor** package. You can refer to the [extractsymbtrdata.ipynb](https://github.com/sertansenturk/symbtrdataextractor/blob/master/extractsymbtrdata.ipynb) for an interactive demo"
    ]
   },
   {
