--- a/joint_analysis_demo.ipynb
+++ b/joint_analysis_demo.ipynb
@@ -53,13 +53,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can use the single line call \"analyze,\" which does all the available analysis simultaneously"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... or call all the methods individually"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Extracting score-informed tonic and tempoussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n"
+     ]
+    }
+   ],
+   "source": [
+    "tonic, tempo = jointAnalyzer.extract_tonic_tempo(score_filepath, score_features,\n",
+    "                                                         audio_filepath, audio_features['pitch'])\n"
+   ]
   }
  ],
  "metadata": {
