--- a/joint_analysis_demo.ipynb
+++ b/joint_analysis_demo.ipynb
@@ -61,12 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +94,7 @@
    ],
    "source": [
     "tonic, tempo = jointAnalyzer.extract_tonic_tempo(score_filepath, score_features,\n",
-    "                                                         audio_filepath, audio_features['pitch'])\n"
+    "                                                 audio_filepath, audio_features['pitch'])\n"
    ]
   }
  ],
@@ -112,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
