--- a/joint_analysis_demo.ipynb
+++ b/joint_analysis_demo.ipynb
@@ -53,13 +53,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can use the single line call \"analyze,\" which does all the available analysis simultaneously"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -88,13 +81,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Extracting score-informed tonic and tempoussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n"
+      "- Extracting score-informed tonic and tempoussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
+      "- Aligning audio recording ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 and music score ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n"
      ]
     }
    ],
    "source": [
     "tonic, tempo = jointAnalyzer.extract_tonic_tempo(score_filepath, score_features,\n",
-    "                                                 audio_filepath, audio_features['pitch'])\n"
+    "                                                 audio_filepath, audio_features['pitch'])\n",
+    "\n",
+    "sections, notes, section_candidates = jointAnalyzer.align_audio_score(\n",
+    "    score_filepath, score_features, audio_filepath, audio_features['pitch'], tonic, tempo)\n"
    ]
   }
  ],
@@ -114,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
