--- a/joint_analysis_demo.ipynb
+++ b/joint_analysis_demo.ipynb
@@ -53,10 +53,17 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "You can use the single line call \"analyze,\" which does all the available analysis simultaneously"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -72,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -81,8 +88,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Extracting score-informed tonic and tempoussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "- Aligning audio recording ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 and music score ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n"
+      "- Extracting score-informed tonic and tempo of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
+      "- Aligning audio recording ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 and music score ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt.\n",
+      "- Filtering predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 after audio-score alignment.\n"
      ]
     }
    ],
@@ -91,7 +99,9 @@
     "                                                 audio_filepath, audio_features['pitch'])\n",
     "\n",
     "sections, notes, section_candidates = jointAnalyzer.align_audio_score(\n",
-    "    score_filepath, score_features, audio_filepath, audio_features['pitch'], tonic, tempo)\n"
+    "    score_filepath, score_features, audio_filepath, audio_features['pitch'], tonic, tempo)\n",
+    "\n",
+    "pitch_filtered, notes_filtered = jointAnalyzer.filter_pitch(audio_features['pitch'], notes)"
    ]
   }
  ],
