--- a/joint_analysis_demo.ipynb
+++ b/joint_analysis_demo.ipynb
@@ -128,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import pickle\n",
-    "pickle.dump([audio_features['pitch'], notes])"
+    "pickle.dump([audio_features['pitch'], notes], open('temp_all.pkl', 'wb'))"
    ]
   }
  ],
