--- a/joint_analysis_demo.ipynb
+++ b/joint_analysis_demo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -48,8 +48,9 @@
     "                                      'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.pkl')\n",
     "score_features = SymbTrAnalyzer.from_pickle(score_feature_filepath)\n",
     "\n",
-    "# instantiate analyzer object\n",
-    "jointAnalyzer = JointAnalyzer(verbose=True)\n"
+    "# instantiate analyzer objects\n",
+    "jointAnalyzer = JointAnalyzer(verbose=True)\n",
+    "audioAnalyzer = AudioAnalyzer(verbose=True)\n"
    ]
   },
   {
@@ -63,11 +64,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# TODO"
+    "# TODO\n"
    ]
   },
   {
@@ -91,18 +92,39 @@
      "text": [
       "- Extracting score-informed tonic and tempo of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "- Aligning audio recording ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 and music score ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt.\n",
-      "- Filtering predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 after audio-score alignment.\n"
+      "- Filtering predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 after audio-score alignment.\n",
+      "- Computing the note models for ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
+      "- Obtaining the melodic progression model of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
+      "- Identifying ahenk of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n"
      ]
     }
    ],
    "source": [
+    "# joint analysis\n",
+    "# score informed joint tonic and tempo estimation\n",
     "tonic, tempo = jointAnalyzer.extract_tonic_tempo(score_filepath, score_features,\n",
     "                                                 audio_filepath, audio_features['pitch'])\n",
     "\n",
+    "# section linking and note-level alignment\n",
     "sections, notes, section_candidates = jointAnalyzer.align_audio_score(\n",
     "    score_filepath, score_features, audio_filepath, audio_features['pitch'], tonic, tempo)\n",
     "\n",
-    "pitch_filtered, notes_filtered = jointAnalyzer.filter_pitch(audio_features['pitch'], notes)\n"
+    "# aligned pitch filter\n",
+    "pitch_filtered, notes_filtered = jointAnalyzer.filter_pitch(audio_features['pitch'], notes)\n",
+    "\n",
+    "# aligned note model\n",
+    "note_models, pitch_distribution, aligned_tonic = jointAnalyzer.get_note_models(\n",
+    "    pitch_filtered, notes_filtered, tonic['symbol'])  # overrides the tonic identification\n",
+    "\n",
+    "# recompute the audio features\n",
+    "# pitch class distribution\n",
+    "pitch_class_distribution = pitch_distribution.to_pcd()\n",
+    "\n",
+    "# get the melodic progression model\n",
+    "melodic_progression = audioAnalyzer.get_melodic_progression(pitch_filtered)\n",
+    "\n",
+    "# transposition (ahenk) identification\n",
+    "ahenk = audioAnalyzer.identify_ahenk(aligned_tonic, aligned_tonic['symbol'])"
    ]
   }
  ],
@@ -122,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
