Improved dictionary saving MCRcaller

--- a/joint_analysis_demo.ipynb
+++ b/joint_analysis_demo.ipynb
@@ -93,9 +93,7 @@
       "- Extracting score-informed tonic and tempo of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "- Aligning audio recording ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 and music score ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt.\n",
       "- Filtering predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 after audio-score alignment.\n",
-      "- Computing the note models for ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "- Obtaining the melodic progression model of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "- Identifying ahenk of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n"
+      "- Computing the note models for ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n"
      ]
     }
    ],
@@ -114,17 +112,35 @@
     "\n",
     "# aligned note model\n",
     "note_models, pitch_distribution, aligned_tonic = jointAnalyzer.get_note_models(\n",
-    "    pitch_filtered, notes_filtered, tonic['symbol'])  # overrides the tonic identification\n",
-    "\n",
+    "    pitch_filtered, notes_filtered, tonic['symbol'])  # overrides the tonic identification\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Obtaining the melodic progression model of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
+      "- Identifying ahenk of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n"
+     ]
+    }
+   ],
+   "source": [
     "# recompute the audio features\n",
-    "# pitch class distribution\n",
-    "pitch_class_distribution = pitch_distribution.to_pcd()\n",
-    "\n",
     "# get the melodic progression model\n",
     "melodic_progression = audioAnalyzer.get_melodic_progression(pitch_filtered)\n",
     "\n",
+    "# pitch class distribution\n",
+    "pitch_class_distribution = pitch_distribution.to_pcd()\n",
+    "\n",
     "# transposition (ahenk) identification\n",
-    "ahenk = audioAnalyzer.identify_ahenk(aligned_tonic, aligned_tonic['symbol'])"
+    "ahenk = audioAnalyzer.identify_ahenk(aligned_tonic, aligned_tonic['symbol'])\n"
    ]
   }
  ],
@@ -144,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
