--- a/joint_analysis_demo.ipynb
+++ b/joint_analysis_demo.ipynb
@@ -66,9 +66,22 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Extracting score-informed tonic and tempo of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
+      "- Aligning audio recording ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 and music score ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt.\n",
+      "- Filtering predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 after audio-score alignment.\n",
+      "- Computing the note models for ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO\n"
+    "# joint analysis\n",
+    "joint_features = jointAnalyzer.analyze(score_filepath, score_features,\n",
+    "                                       audio_filepath, audio_features['pitch'])"
    ]
   },
   {
@@ -99,7 +112,7 @@
    ],
    "source": [
     "# joint analysis\n",
-    "# score informed joint tonic and tempo estimation\n",
+    "# joint, score-informed tonic and tempo estimation\n",
     "tonic, tempo = jointAnalyzer.extract_tonic_tempo(score_filepath, score_features,\n",
     "                                                 audio_filepath, audio_features['pitch'])\n",
     "\n",
@@ -112,7 +125,14 @@
     "\n",
     "# aligned note model\n",
     "note_models, pitch_distribution, aligned_tonic = jointAnalyzer.get_note_models(\n",
-    "    pitch_filtered, notes_filtered, tonic['symbol'])  # overrides the tonic identification\n"
+    "    pitch_filtered, notes_filtered, tonic['symbol'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then you can recompute the audio features using the filtered pitch and tonic"
    ]
   },
   {
